--- a/A2_iOS_berlean_101465969/Base.lproj/Main.storyboard
+++ b/A2_iOS_berlean_101465969/Base.lproj/Main.storyboard
@@ -97,6 +97,7 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Product List"/>
                                 <connections>
                                     <action selector="listTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rWz-tq-wZA"/>
+                                    <segue destination="a7e-dX-PLW" kind="show" id="Tgv-xz-yp1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -191,13 +192,17 @@
             <objects>
                 <viewController id="a7e-dX-PLW" customClass="ProductListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6PG-fJ-P7N">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="heB-1D-iXO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="ProductCell" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="heB-1D-iXO">
                                 <rect key="frame" x="76" y="177" width="240" height="584"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="a7e-dX-PLW" id="tvq-fm-LbB"/>
+                                    <outlet property="delegate" destination="a7e-dX-PLW" id="CTd-Sv-fNK"/>
+                                </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Product List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFn-38-qYp">
                                 <rect key="frame" x="150" y="111" width="92" height="21"/>
@@ -210,6 +215,7 @@
                         <viewLayoutGuide key="safeArea" id="rQX-3Y-Oel"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="nxg-t0-zCe"/>
                     <connections>
                         <outlet property="tableView" destination="heB-1D-iXO" id="zIy-q1-GtS"/>
                     </connections>
